30-Jun-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py, mc15_13TeV_week1_MCSampleList.py: update list of baseline samples
	* ZeroLeptonCRxx: fill tau variables

29-Jun-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py: update list of baseline samples, still a few missing "core" samples

28-Jun-2015 Laurent Duflot
	* BuildSUSYObjects: comment destructor due to crash in SUSYObjDef_xAOD
	destructor
	* update to SUSYTools-00-06-13: no change in ttbar cutflow
	* tagged as ZeroLeptonRun2-00-00-41

26-Jun-2015 Laurent Duflot
	* update to SUSYTools-00-06-12: ~10% more signal leptons in CRWT
	* BuildSUSYObjects, PhysObjProxyFiller: adapt to SUSYTools changes
	* there are no compatible DC14 SUSYTools tag
	* tagged as ZeroLeptonRun2-00-00-40

25-Jun-2015 Laurent Duflot
	* ZeroLeptonCRWT, ZeroLeptonCRZ, ZeroLeptonCRY: add RJigsaw block
	* BuildSUSYObjects: update list of triggers
	* update to SUSYTools-00-06-10
	* tagged as ZeroLeptonRun2-00-00-39

25-Jun-2015 Laurent Duflot
	* ZeroLeptonCRWT, ZeroLeptonCRZ: for Run 2 data, set both
	isMuonChannel and isElectronChannel to true since trigger cannot
	be decided from stream

24-Jun-2015 Laurent Duflot
	* BuildSUSYObjects: fix jet btagging bug (cut value was for a previous
	tagger)
	* PhysObjProxyUtils.cxx: fill jetBTag variable with the MV2c20
	discriminant value

23-Jun-2015 Laurent Duflot
	* README: update file for example command
	* launch_jobs_on_grid.py: include Ext_RestFrames tarball

22-Jun-2015 Laurent Duflot
	* ZeroLeptonNtVars, PhysObjProxyUtils, SR and CR: add lumi block number,
	remove BCH_CORR_CELL and experimental met definitions:
	metNOCHCORRCELL, metLHTOPO, metLHTOPONOCHCORRCELL
	*  ZeroLeptonNtVars, PhysObjProxyUtils, FilterUpdateMerge, ZeroLeptonSR:
	add RJigsaw variables

12-Jun-2015 Laurent Duflot
	* MCInfoProcessor, config files: change TruthParticleContainer key for mc15
	* launch_jobs_on_grid.py: bug fix for derivation detection. Signal
	patterns for mc15.

11-Jun-2015 Geraldine Conti