@@ -61,7 +61,9 @@ void JobBookeeping::inputFileOpened(TFile *file)
 {
   m_eventCounter = 0;
   m_openedFiles.push_back(file->GetName());
-  if ( m_derivationTag == p2353 || m_derivationTag == p2363 ) {
+  if ( m_derivationTag == p2353 || m_derivationTag == p2363 || 
+       m_derivationTag == p2372 || m_derivationTag == p2375 ||
+       m_derivationTag == p2377 ) {
 
 
     // extract information from CutBookkeeperContainer in Metadata
